# lab-notebook

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  MIGRATION_PLAN.md  docker-compose.prod.yml  docker-compose.yml  lab_notebook_summary.md  migrate_folders.py  pyproject.toml  split_experiment_log.py  sync_notes.py  upload_all_split.py
Experiment_Log/: Experiment Log 31a926cb73558004809ef2b2524613b5.md
Experiment_Log/Experiment Log/: IMG_9212.heic  IMG_9547.heic  IMG_9549.heic  IMG_9551.heic  IMG_9552.heic  IMG_9555.heic  IMG_9557.heic
NotionPage/: Measurement Database 152926cb735580e59ac7dff49d1e6b17.csv
NotionPage/HOIP Project/: Mn-BA Sample Batch Nov 2025 31a926cb7355809d9fd9ca881e9362ac.csv
backend/: database.py  main.py  models.py  scanner.py
backend/parsers/: fmr.py  ppms.py  pxrd.py
frontend/: index.html
frontend/css/: base.css  boxes.css  graph.css  inventory.css  notes.css  overview.css  preparations.css  stock.css  viz.css
frontend/js/: boxes.js  graph.js  inventory.js  main.js  notes.js  overview.js  preparations.js  stock.js  (+1 more)
scripts/: backup-data.sh  backup-to-b2.sh  com.lab-notebook.backup.plist  import-from-obsidian.py  import_experiment_log.py  sync-data-to-remote.sh
split_logs/: log-2024-12-10.md  log-2024-12-12.md  log-2025-01-10.md  log-2025-01-14.md  log-2025-01-15.md  log-2025-01-21.md  log-2025-01-24.md  log-2025-01-28.md  log-2025-02-04.md  log-2025-02-05.md  log-2025-04-21.md  log-2025-09-17.md  log-2025-11-13.md  log-2025-11-17.md  log-2025-11-18.md  log-2025-11-19.md  log-2025-11-20.md  log-2026-02-10.md  log-2026-03-06.md
(+8 files in other folders)
